IDの生成ロジック作成とdynamodbへの接続の修正